OMG OMG, forked tests!